# cl.indiana.edu

./: .gitignore  README.md  pelicanconf.py  pyproject.toml
content/: courses.md  courses.yaml  index.md  people.md  people.yaml  programs.md  projects.md
content/programs/: bs.md  bs_ms.md  ma.md  minor.md  ms.md  phd.md  phd_minor.md
plugins/: bibliography_markdown.py  yaml_loader.py
themes/cl-indiana/static/css/: styles.css
themes/cl-indiana/templates/: base.html  courses.html  page.html  people.html  programs.html
