[project]
name = "pelicansite"
version = "0.1.0"
description = "cl.indiana.edu"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pelican[markdown]>=4.11.0",
    "setuptools",
    "pelican>=4.8.0",
    "invoke>=2.0.0",
    "livereload>=2.6.3",
    "ghp-import>=2.1.0",
    "markdown>=3.4.1",
    "typogrify>=2.0.7",
    "asciidoc>=10.0.0",
    "pybtex>=0.24.0",
]
